--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -34,9 +34,9 @@
         <input type="submit" value="Search" />
     </form>
 
-    <hr />
+    <hr/>
 
-    <!-- TODO #4 - Loop over the search results to display all job fields. -->
+    <table th:replace ="list-jobs :: display-table"></table>
 
 </div>
 
